[package]
name = "extract_links"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
error-chain = { version = "0.12" }
reqwest = { version = "0.10" }
select = { version = "0.5" }